Replace tabs for spaces. Allow tessarray to render (and raise an error) if one of the boxes is empty

--- a/example.html
+++ b/example.html
@@ -1,116 +1,116 @@
 <html>
-	<div style="margin : auto; text-align: center">
-	  <h1>Tessarray<h1>
-	</div>
-	<button class="selector" data-category="">all</button>
-	<button class="selector" data-category="reverse">reverse-all</button>
-	<button class="selector" data-category="nature">nature</button>
-	<button class="selector" data-category="buildings">buildings</button>
-	<button class="selector" data-category="people">people</button>
-	<span style="float: right">Try resizing the window!</span>
-	    
-	<!-- Provide aspect ratio or height and width through data attributes, or don't specify any at all -->
-	<!-- Provide the aspect ratios either way for better performance -->
-	<div class="container">
-		<!-- data-height="1080" data-width="1600" --> 
-	  <div class="box reverse people" data-reverse="10" data-height="1080" data-width="1600">
-	    <img class="image" src="https://source.unsplash.com/category/people/1080x1600"/>
-	  </div>
-	  <!-- data-height="720" data-width="1080" data-aspect-ratio="0.66666666666" --> 
-	  <div class="box reverse nature" data-reverse="9" data-aspect-ratio="0.66666666666">		    
-	    <img class="image" src="https://source.unsplash.com/category/nature/720x1080"/>
-	  </div>
-	  <!-- data-height="900" data-width="900" data-aspect-ratio="1" --> 
-	  <div class="box reverse nature" data-reverse="8" data-aspect-ratio="1">		    
-	    <img class="image" src="https://source.unsplash.com/category/nature/900x900"/>
-	  </div>
-	  <!-- data-height="1600" data-width="900" data-aspect-ratio="1.77777777778"--> 
-	  <div class="box reverse people" data-reverse="7" data-aspect-ratio="1.77777777778">
-	    <img class="image" src="https://source.unsplash.com/category/people/1600x900"/>
-	  </div>
-	  <!-- data-height="800" data-width="600" data-aspect-ratio="1.77778"--> 
-	  <div class="box reverse nature" data-reverse="6" data-aspect-ratio="1.77778">
-	    <img class="image" src="https://source.unsplash.com/category/nature/800x600"/>
-	  </div>
-	  <!-- data-height="600" data-width="600" data-aspect-ratio="1"--> 
-	  <div class="box reverse buildings" data-reverse="5" data-aspect-ratio="1">
-	    <img class="image" src="https://source.unsplash.com/category/buildings/600x600"/>
-	  </div>
-	  <!-- data-height="900" data-width="900" data-aspect-ratio="1"--> 
-	  <div class="box reverse people" data-reverse="4" data-aspect-ratio="1">
-	    <img class="image" src="https://source.unsplash.com/category/people/900x900"/>
-	  </div>
-	  <!-- data-height="800" data-width="600" data-aspect-ratio="1.77778"--> 
-	  <div class="box reverse buildings" data-reverse="3" data-aspect-ratio="1.77778">
-	    <img class="image" src="https://source.unsplash.com/category/buildings/800x600"/>
-	  </div>
-	  <!-- data-height="1080" data-width="1600" data-aspect-ratio="0.675"--> 
-	  <div class="box reverse buildings" data-reverse="2" data-aspect-ratio="0.675">
-	    <img class="image" src="https://source.unsplash.com/category/buildings/1080x1600"/>
-	  </div>
-	  <!-- data-height="1200" data-width="900" data-aspect-ratio="1.77778"--> 
-	  <div class="box reverse nature" data-reverse="1" data-aspect-ratio="1.77778">
-	    <img class="image" src="https://source.unsplash.com/category/nature/1200x900"/>
-	  </div>
-	</div>
+  <div style="margin : auto; text-align: center">
+    <h1>Tessarray<h1>
+  </div>
+  <button class="selector" data-category="">all</button>
+  <button class="selector" data-category="reverse">reverse-all</button>
+  <button class="selector" data-category="nature">nature</button>
+  <button class="selector" data-category="buildings">buildings</button>
+  <button class="selector" data-category="people">people</button>
+  <span style="float: right">Try resizing the window!</span>
+      
+  <!-- Provide aspect ratio or height and width through data attributes, or don't specify any at all -->
+  <!-- Provide the aspect ratios either way for better performance -->
+  <div class="container">
+    <!-- data-height="1080" data-width="1600" --> 
+    <div class="box reverse people" data-reverse="10" data-height="1080" data-width="1600">
+      <!-- <img class="image" src="https://source.unsplash.com/category/people/1080x1600"/> -->
+    </div>
+    <!-- data-height="720" data-width="1080" data-aspect-ratio="0.66666666666" --> 
+    <div class="box reverse nature" data-reverse="9" data-aspect-ratio="0.66666666666">       
+      <img class="image" src="https://source.unsplash.com/category/nature/720x1080"/>
+    </div>
+    <!-- data-height="900" data-width="900" data-aspect-ratio="1" --> 
+    <div class="box reverse nature" data-reverse="8" data-aspect-ratio="1">       
+      <img class="image" src="https://source.unsplash.com/category/nature/900x900"/>
+    </div>
+    <!-- data-height="1600" data-width="900" data-aspect-ratio="1.77777777778"--> 
+    <div class="box reverse people" data-reverse="7" data-aspect-ratio="1.77777777778">
+      <img class="image" src="https://source.unsplash.com/category/people/1600x900"/>
+    </div>
+    <!-- data-height="800" data-width="600" data-aspect-ratio="1.77778"--> 
+    <div class="box reverse nature" data-reverse="6" data-aspect-ratio="1.77778">
+      <img class="image" src="https://source.unsplash.com/category/nature/800x600"/>
+    </div>
+    <!-- data-height="600" data-width="600" data-aspect-ratio="1"--> 
+    <div class="box reverse buildings" data-reverse="5" data-aspect-ratio="1">
+      <img class="image" src="https://source.unsplash.com/category/buildings/600x600"/>
+    </div>
+    <!-- data-height="900" data-width="900" data-aspect-ratio="1"--> 
+    <div class="box reverse people" data-reverse="4" data-aspect-ratio="1">
+      <img class="image" src="https://source.unsplash.com/category/people/900x900"/>
+    </div>
+    <!-- data-height="800" data-width="600" data-aspect-ratio="1.77778"--> 
+    <div class="box reverse buildings" data-reverse="3" data-aspect-ratio="1.77778">
+      <img class="image" src="https://source.unsplash.com/category/buildings/800x600"/>
+    </div>
+    <!-- data-height="1080" data-width="1600" data-aspect-ratio="0.675"--> 
+    <div class="box reverse buildings" data-reverse="2" data-aspect-ratio="0.675">
+      <img class="image" src="https://source.unsplash.com/category/buildings/1080x1600"/>
+    </div>
+    <!-- data-height="1200" data-width="900" data-aspect-ratio="1.77778"--> 
+    <div class="box reverse nature" data-reverse="1" data-aspect-ratio="1.77778">
+      <img class="image" src="https://source.unsplash.com/category/nature/1200x900"/>
+    </div>
+  </div>
 
-	<style>
-		/* This is necessary for images to render properly */
-		.image {
-		  height: 100%;
-		  width: 100%;
-		}
+  <style>
+    /* This is necessary for images to render properly */
+    .image {
+      height: 100%;
+      width: 100%;
+    }
 
-		.image:hover {
-			opacity: 0.5;
-		}
+    .image:hover {
+      opacity: 0.5;
+    }
 
-		/* Necessary if containerClass is not specified */
-		.container {
-		  position: relative;
-		}
+    /* Necessary if containerClass is not specified */
+    .container {
+      position: relative;
+    }
 
-		/* Use this if images are appearing before rendering correctly */
-		.container {
-		  opacity: 0;
-		}
+    /* Use this if images are appearing before rendering correctly */
+    .container {
+      opacity: 0;
+    }
 
-		/* Use this to specify default container height before images load */
-/*		.container {
-			height: 500px;
-		}*/
+    /* Use this to specify default container height before images load */
+/*    .container {
+      height: 500px;
+    }*/
 
-		/* Use this to create a background for images before they render
-		Use if container opacity is not transitioning in */
-		.box {
-			background-color: grey;
-		}
-	</style>
+    /* Use this to create a background for images before they render
+    Use if container opacity is not transitioning in */
+    .box {
+      background-color: grey;
+    }
+  </style>
 
-	<script src='tessarray.js'></script>	
-	<script>
-		setTimeout(function() {
-			var tessarray = new Tessarray("box", {
-				// comment-out to see functionality without containerClass and selectorClass
-				containerClass: "container",
-				selectorClass: "selector",
+  <script src='tessarray.js'></script>  
+  <script>
+    // setTimeout(function() {
+      var tessarray = new Tessarray("box", {
+        // comment-out to see functionality without containerClass and selectorClass
+        containerClass: "container",
+        selectorClass: "selector",
 
-				// Comment-in lines to see how options effect the render
-				duration: 650,
-				// timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
-				// imageClass: "imageClass",
-				// delay: 50,
-				defaultCategory: "people",
-				// containerTransition: false,
-				flickr: {
-					targetRowHeight: 300,
-					targetRowHeightTolerance: 0.15,
-					// maxNumRows: 2,
-					// containerPadding: 40
-				}
-			});
-		}, 5000);
-		// tessarray.options.flickr.targetRowHeight = 500;
-		// tessarray.renderBoxes();
-	</script>
+        // Comment-in lines to see how options effect the render
+        duration: 650,
+        // timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
+        // imageClass: "imageClass",
+        // delay: 50,
+        // defaultCategory: "people",
+        // containerTransition: false,
+        flickr: {
+          targetRowHeight: 300,
+          targetRowHeightTolerance: 0.15,
+          // maxNumRows: 2,
+          // containerPadding: 40
+        }
+      });
+    // }, 5000);
+    // tessarray.options.flickr.targetRowHeight = 500;
+    // tessarray.renderBoxes();
+  </script>
 </html>
