Remove unecessary conditional from else statement that was breaking

--- a/example.html
+++ b/example.html
@@ -14,7 +14,7 @@
   <div class="container">
     <!-- data-height="1080" data-width="1600" --> 
     <div class="box reverse people" data-reverse="10" data-height="1080" data-width="1600">
-      <!-- <img class="image" src="https://source.unsplash.com/category/people/1080x1600"/> -->
+      <img class="image" src="https://source.unsplash.com/category/people/1080x1600"/>
     </div>
     <!-- data-height="720" data-width="1080" data-aspect-ratio="0.66666666666" --> 
     <div class="box reverse nature" data-reverse="9" data-aspect-ratio="0.66666666666">       
