Add more comments to tessarray.js

--- a/example.html
+++ b/example.html
@@ -83,8 +83,8 @@
     /* Use this if images are appearing before rendering correctly */
 /*    .container {
       opacity: 0;
-    }
-*/
+    }*/
+
     /* Use this to specify default container height before images load */
 /*    .container {
       height: 500px;
@@ -109,10 +109,10 @@
         selectorClass: "selector",
 
         // Comment-in lines to see how options effect the render
-        duration: 650,
+        // duration: 650,
         // timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
-        // imageClass: "imageClass",
         // delay: 50,
+        // imageClass: "imageClass",
         // defaultCategory: "people",
         // containerTransition: false,
         flickr: {
