--- a/example.html
+++ b/example.html
@@ -14,7 +14,7 @@
     <!-- Provide the aspect ratios either way for better performance -->
     <div class="container">
       <!-- data-height="1080" data-width="1600" --> 
-      <div class="box reverse people" data-reverse="10" data-height="1080" data-width="1600">
+      <div class="box reverse people" data-reverse="10">
         <img class="image" src="https://source.unsplash.com/category/people/1080x1600"/>
       </div>
       <!-- data-height="720" data-width="1080" data-aspect-ratio="0.66666666666" --> 
@@ -92,18 +92,21 @@
 
     /* Use this to create a background for images before they render
     Use if container opacity is not transitioning in */
-    .box {
+    .box:after {
+      content: "";
       background-color: grey;
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      opacity: 1;
     }
+
   </style>
 
   <script src='tessarray.js'></script>  
   <script>
-    var firstImage = document.getElementsByClassName('image')[0]
-  </script>
-  <script>
     // setTimeout(function() {
-      var tessarray = new Tessarray("box", "container", {
+      var tessarray = new Tessarray(".box", ".container", {
         selectorClass: "selector",
 
         // Comment-in lines to see how options effect the render
@@ -117,7 +120,7 @@
         // },
         flickr: {
           targetRowHeight: 300,
-          targetRowHeightTolerance: 0.15,
+          targetRowHeightTolerance: 0.25,
           // containerPadding: 0,
           // containerPadding: {
           //   top: 10,
