--- a/example.html
+++ b/example.html
@@ -258,8 +258,8 @@
 
     /* Use this if images are appearing before rendering correctly */
     .container {
-      opacity: 0;
-      position: relative;
+      /*opacity: 0;*/
+      position: absolute;
     }
 
     /* Use this to specify default container height before images load */
@@ -314,7 +314,7 @@
         flickr: {
           targetRowHeight: 300,
           targetRowHeightTolerance: 0.25,
-          showWidows: false,
+          // showWidows: false,
           // containerPadding: 0,
           // containerPadding: {
           //   top: 10,
