--- a/example.html
+++ b/example.html
@@ -232,7 +232,7 @@
         <img class="image" src="https://source.unsplash.com/category/buildings/1080x1600"/>
       </div>
       <!-- data-height="1200" data-width="900" data-aspect-ratio="1.333333333"--> 
-      <div class="box reverse nature" data-reverse="1" data-aspect-ratio="1.3333333333">
+      <div class="box reverse nature" data-reverse="1" data-aspect-ratio="1.333333333">
         <img class="image" src="https://source.unsplash.com/category/nature/1200x900"/>
       </div>
     </div>
@@ -260,6 +260,13 @@
     .container {
       /*opacity: 0;*/
       position: absolute;
+      max-height: 600px;
+    }
+
+    .container.container-is-loaded {
+      /*opacity: 0;*/
+      /*position: absolute;*/
+      max-height: 1000px;
     }
 
     /* Use this to specify default container height before images load */
@@ -301,7 +308,7 @@
         // Comment-in lines to see how options effect the render
         // imageClass: "imageClass",
         // defaultCategory: "people",
-        // containerTransition: false,
+        containerTransition: "max-height 350ms ease-in, opacity 350ms ease-in",
         // boxTransition: {
         //   duration: 650,
         //   timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
