--- a/example.html
+++ b/example.html
@@ -1,5 +1,64 @@
 <html>
-  <body>
+<style>
+/*  body {
+    padding: 0;
+    margin: 0;
+  }*/
+
+    /* This is necessary for images to render properly */
+/*    .image {
+      height: 100%;
+      width: 100%;
+    }*/
+
+/*    .image:hover {
+      opacity: 0.5;
+    }*/
+
+    /* Use this if images are appearing before rendering correctly */
+    .container {
+      opacity: 0;
+      /*position: absolute;*/
+      /*height: 0px;*/
+      /*width: 800px;*/
+    }
+
+    /*.container.container-is-loaded {*/
+      /*opacity: 0;*/
+      /*position: absolute;*/
+      /*min-height: 400px;*/
+    /*}*/
+
+    /* Use this to specify default container height before images load */
+/*    .container {
+      height: 500px;
+    }*/
+
+/*    .box {
+      opacity: 1;
+    }*/
+
+    .box {
+      background-color: gray;
+    }
+
+    .image {
+      height: 100%;
+      width: 100%;
+      opacity: 0;
+      transition: opacity 375ms ease-in;
+    }
+
+    .is-loaded .image {
+      opacity: 1;
+    }
+
+    .is-loaded.image {
+      opacity: 1;
+    }
+
+</style>
+  <body style="background-color: black">
     <div style="margin : auto; text-align: center">
       <h1>Tessarray<h1>
     </div>
@@ -200,7 +259,7 @@
         <!-- <img class="image" src="https://source.unsplash.com/category/people/1080x1600"/> -->
       </div>
       <!-- data-height="720" data-width="1080" data-aspect-ratio="0.66666666666" -->
-      <div class="box reverse nature" data-reverse="9">
+      <div class="box reverse nature" data-reverse="9" data-aspect-ratio="0.66666666666" >
         <img class="image" src="https://source.unsplash.com/category/nature/720x1080"/>
       </div>
       <!-- data-height="900" data-width="900" data-aspect-ratio="1" --> 
@@ -240,104 +299,52 @@
 
     <p>Sample text</p>
   </body>
-  <style>
-/*  body {
-    padding: 0;
-    margin: 0;
-  }*/
+<script src='tessarray.js'></script>  
+<script>
+  // setTimeout(function() {
+    var tessarray = new Tessarray(".box", ".container", {
+      // selectorClass: "selector",
 
-    /* This is necessary for images to render properly */
-/*    .image {
-      height: 100%;
-      width: 100%;
-    }*/
-
-/*    .image:hover {
-      opacity: 0.5;
-    }*/
-
-    /* Use this if images are appearing before rendering correctly */
-    .container {
-      /*opacity: 0;*/
-      /*position: absolute;*/
-      height: 0px;
-      /*width: 800px;*/
-    }
-
-    .container.container-is-loaded {
-      /*opacity: 0;*/
-      /*position: absolute;*/
-      /*min-height: 400px;*/
-    }
-
-    /* Use this to specify default container height before images load */
-/*    .container {
-      height: 500px;
-    }*/
-
-/*    .box {
-      opacity: 1;
-    }*/
-
-    .box {
-      background-color: gray;
-    }
-
-    .image {
-      height: 100%;
-      width: 100%;
-      opacity: 0;
-      transition: opacity 375ms ease-in;
-    }
-
-    .is-loaded .image {
-      opacity: 1;
-    }
-
-/*    .is-loaded.image {
-      opacity: 1;
-    }*/
-
-  </style>
-
-  <script src='tessarray.js'></script>  
-  <script>
-    // setTimeout(function() {
-      var tessarray = new Tessarray(".box", ".container", {
-        selectorClass: "selector",
-
-        // Comment-in lines to see how options effect the render
-        // imageClass: "imageClass",
-        defaultCategory: "people",
-        containerTransition: "height 800ms ease-in, opacity 350ms ease-in",
-        // boxTransition: {
-          // duration: 350,
-          // timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
-          // timingFunction: "cubic-bezier(0.320, 1.385, 0.730, -0.470)",
-          // delay: 0,
-        // },
-        // isLoaded: function(box) {
-        //   // box.style.opacity = 1;
-        //   console.log(box);
+      // Comment-in lines to see how options effect the render
+      // imageClass: "imageClass",
+      // defaultCategory: "people",
+      // containerTransition: "opacity 400ms ease-in",
+      // containerTransition: false,
+      // containerTransition: {
+      //   duration: 5000,
+      //   timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
+      //   delay: 0
+      // }
+      // boxTransition: {
+        // duration: 350,
+        // timingFunction: "cubic-bezier(0.215, 0.61, 0.355, 1)",
+        // timingFunction: "cubic-bezier(0.320, 1.385, 0.730, -0.470)",
+        // delay: 0,  
+      // },
+      // boxTransition: 'transform 500ms ease-in 0ms, height 500ms ease-in 0ms, width 500ms ease-in 0ms',
+      // boxTransition: 'height 500ms ease-in 0ms, width 500ms ease-in 0ms',
+      // isLoaded: function(box) {
+      //   // box.style.opacity = 1;
+      //   console.log(box);
+      // }
+      // flickr: {
+        // containerWidth: 900,
+        // targetRowHeight: 300,
+        // targetRowHeightTolerance: 0.25,
+        // showWidows: false,
+        // containerPadding: 0,
+        // containerPadding: {
+        //   top: 10,
+        //   right: 15,
+        //   bottom: 0,
+        //   left: 5
         // }
-        flickr: {
-          // containerWidth: 900,
-          targetRowHeight: 300,
-          targetRowHeightTolerance: 0.25,
-          // showWidows: false,
-          // containerPadding: 0,
-          // containerPadding: {
-          //   top: 10,
-          //   right: 15,
-          //   bottom: 0,
-          //   left: 5
-          // }
-          // maxNumRows: 2,
-          // containerPadding: 40
-        }
-      });
-    // }, 5000);
-    // tessarray.options.flickr.targetRowHeight = 500;
-    // tessarray.renderBoxes();
-  </script>
+        // maxNumRows: 2,
+        // containerPadding: 40
+      // }
+    });
+  // }, 300);
+  // tessarray.options.flickr.targetRowHeight = 500;
+  // tessarray.renderBoxes();
+</script>
 </html>
