Correctly set this.selectedBoxes

--- a/example.html
+++ b/example.html
@@ -303,7 +303,7 @@
 <script>
   // setTimeout(function() {
     var tessarray = new Tessarray(".box", ".container", {
-      // selectorClass: "selector",
+      selectorClass: "selector"
 
       // Comment-in lines to see how options effect the render
       // imageClass: "imageClass",
@@ -325,7 +325,6 @@
       // boxTransition: 'height 500ms ease-in 0ms, width 500ms ease-in 0ms',
       // isLoaded: function(box) {
       //   // box.style.opacity = 1;
-      //   console.log(box);
       // }
       // flickr: {
         // containerWidth: 900,
