Enable selectorClass and move console.time

--- a/example.html
+++ b/example.html
@@ -303,7 +303,7 @@
 <script>
   // setTimeout(function() {
     var tessarray = new Tessarray(".box", ".container", {
-      // selectorClass: "selector",
+      selectorClass: "selector",
 
       // Comment-in lines to see how options effect the render
       // imageClass: "imageClass",
