Rename attributes and methods.

--- a/example.html
+++ b/example.html
@@ -302,7 +302,7 @@
 <script src='tessarray.js'></script>  
 <script>
   // setTimeout(function() {
-    var tessarray = new Tessarray(".box", ".container", {
+    var tessarray = new Tessarray(".container", ".box", {
       selectorClass: "selector",
 
       // Comment-in lines to see how options effect the render
