--- a/example.html
+++ b/example.html
@@ -71,7 +71,7 @@
         
     <!-- Provide aspect ratio or height and width through data attributes, or don't specify any at all -->
     <!-- Provide the aspect ratios either way for better performance -->
-    <div class="container">
+    <div class="containerb">
       <!-- data-height="1080" data-width="1600" --> 
       <div class="box reverse people" data-reverse="10" data-height="1080" data-width="1600">
         <svg class="image" style="width: 100%; height: 100%;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 256 250" version="1.1" preserveAspectRatio="xMidYMid">
