Remove redundant js files. Reminify tessarray.js. Fix example.html. Still needs some work on documentation.

--- a/example.html
+++ b/example.html
@@ -27,39 +27,36 @@
   <div style="margin : auto; text-align: center">
     <h1>Tessarray<h1>
   </div>
-  <button class="selector" data-category="">all</button>
-  <button class="selector" data-category="reverse">reverse-all</button>
-  <button class="selector" data-category="nature">nature</button>
-  <button class="selector" data-category="buildings">buildings</button>
-  <button class="selector" data-category="people">people</button>
+  <button class="selector" data-filter="" data-sort="">all</button>
+  <button class="selector" data-filter="" data-sort="data-reverse">reverse-all</button>
+  <button class="selector" data-filter="nature">nature</button>
+  <button class="selector" data-filter="buildings">buildings</button>
+  <button class="selector" data-filter="people">people</button>
   <span style="float: right">Try resizing the window!</span>
       
   <!-- Provide aspect ratio or height and width through data attributes for a smoother load. -->
   <!-- If you don't know the dimensions, you don't have to provide any -->
   <div class="container">
-    <div class="box reverse people" data-reverse="10" data-height="1600" data-width="1080">
+    <div class="box reverse people" data-reverse="9" data-height="1600" data-width="1080">
       <img class="image" src="https://source.unsplash.com/category/people/1080x1600"/>
     </div>
-    <div class="box reverse nature" data-reverse="9" data-aspect-ratio="0.66666666666" >
+    <div class="box reverse nature" data-reverse="8" data-aspect-ratio="0.66666666666" >
       <img class="image" src="https://source.unsplash.com/category/nature/720x1080"/>
     </div>
-    <div class="box reverse nature" data-reverse="8" data-aspect-ratio="1">
+    <div class="box reverse nature" data-reverse="7" data-aspect-ratio="1">
       <img class="image" src="https://source.unsplash.com/category/nature/900x900"/>
     </div>
-    <div class="box reverse people" data-reverse="7" data-aspect-ratio="1.77777777778">
+    <div class="box reverse people" data-reverse="6" data-aspect-ratio="1.77777777778">
       <img class="image" src="https://source.unsplash.com/category/people/1600x900"/>
     </div>
-    <div class="box reverse nature" data-reverse="6" data-aspect-ratio="1.333333">
+    <div class="box reverse nature" data-reverse="5" data-aspect-ratio="1.333333">
       <img class="image" src="https://source.unsplash.com/category/nature/800x600"/>
     </div>
-    <div class="box reverse buildings" data-reverse="5" data-aspect-ratio="1">
+    <div class="box reverse buildings" data-reverse="4" data-aspect-ratio="1">
       <img class="image" src="https://source.unsplash.com/category/buildings/600x600"/>
     </div>
-    <div class="box reverse people" data-reverse="4" data-aspect-ratio="1">
+    <div class="box reverse people" data-reverse="3" data-aspect-ratio="1">
       <img class="image" src="https://source.unsplash.com/category/people/900x900"/>
-    </div>
-    <div class="box reverse buildings" data-reverse="3" data-aspect-ratio="1.333333333">
-      <img class="image" src="https://source.unsplash.com/category/buildings/800x600"/>
     </div>
     <div class="box reverse buildings" data-reverse="2" data-aspect-ratio="0.675">
       <img class="image" src="https://source.unsplash.com/category/buildings/1080x1600"/>
